--- a/views/fragmente/footer.ejs
+++ b/views/fragmente/footer.ejs
@@ -20,10 +20,11 @@
     <small id="copyright">
         Copyright &#169; <time datetime="2022-10-15">15 Oct 2022</time>-prezent Iulia Udrea 
     </small>
-    <p id="banner">Acesta este un proiect școlar. 
+    <p id="banner">
+        Acesta este un proiect școlar. 
         <span id="mesaj-cookies">
-            Acceptati cookie-urile de pe site?
-            <button id="ok_cookie">Ok</button>
+            Acceptați cookie-urile de pe site? <br>
+            <button id="ok_cookie" class="btn btn-primary">Ok</button>
         </span>
     </p>
 </footer>
