--- a/views/fragmente/header.ejs
+++ b/views/fragmente/header.ejs
@@ -30,7 +30,7 @@
         <li> 
             <a  href="/index"> 
                 <i id="icon-casuta" class="fa-solid fa-house"></i>
-                <b id="text-acasa">Acasă</b></a>
+                <div id="text-acasa">Acasă</div></a>
             <ul>
                 <li> <a href="/index#prezentare">Prezentare</a> </li>
                 <li> <a href="/index#recomandari"><b>Recomandări</b></a></li>
