--- a/views/pagini/produs.ejs
+++ b/views/pagini/produs.ejs
@@ -18,7 +18,7 @@
 
                 <article id="art-produs">
                     <figure class="imag-produs">
-                        <img  src="/resurse/imagini/produse/<%- locals.prod.imagine %>" alt="[imagine <%- locals.prod.nume %>]" />
+                        <img  src="/resurse/imagini/produse/<%- locals.prod.imagine %>" alt="[imagine <%- locals.prod.titlu %>]" />
                     </figure>
 
                     <div class="detaliiProd">
@@ -88,6 +88,18 @@
                     
                 </article>
             
+        </section>
+        <section id="ultimulProdus">
+            <h2>Ultimul produs vizitat:</h2>
+            <figure>
+                <a id="ultLink">
+                    <img id="ultPoza">
+                </a>
+                <figcaption>
+                    <div id="ultTitlu"></div>
+                    <div id="ultPret"></div>
+                </figcaption>
+            </figure>
         </section>
     </main>
 
