--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -22,6 +22,9 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 
 <link rel="stylesheet" href="/resurse/css/biblioteci/bootstrap-custom.css">
 <link rel="stylesheet" href="/resurse/css/layout.css">
@@ -41,3 +44,4 @@
 <script src="/resurse/js/tema.js"></script>
 <script src="/resurse/js/cookies.js"></script>
 <script src="/resurse/js/meniu.js"></script>
+<script src="/resurse/js/accordion.js"></script>
